[package]
name = "pqc_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Olekssy Lialka <dev.lialka@pm.me>"]
description = "A lightweight Rust library for post-quantum cryptography providing secure key management, encryption, and digital signatures using NIST-standardized algorithms"
license = "MIT"
repository = "https://github.com/olekssy/pqc_bridge"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "kyber", "dilithium", "encryption"]
categories = ["cryptography"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
pqc_dilithium = "0.2.0"
pqc_kyber = "0.7.1"
rand = "0.8.5"
sha3 = "0.10.8"
